hausseGraphePose affiche le nombre de hausses posées dans le temps

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,22 @@
+# Titre de la page d'accueil.
+accueil.titre=Ruches
 
-# virtual threads : pas d'amélioration du temps d'execution des tests
-# spring.threads.virtual.enabled=true 
+# Pagination nombre de lignes, par défaut 10.
+# Utilisé par les tableaux datatables avec pagination.
+#   à choisir parmi 10, 25, 50, 100
+#    parseInt ajouté dans include.html sinon 0 ajouté en préfixe
+#       et la pagination ne fonctionne pas.
+datatables.pageLength=25
 
 # Pour la mise en cache par le navigateur des ressources statiques servies par Spring Boot.
 # Sans doute inutile si elles sont servies par un frontal Apache.
 # https://www.baeldung.com/cachable-static-assets-with-spring-mvc
 spring.resources.cache.cachecontrol.max-age=7d
 
-# Notifications des événements commentaire par email.
-# Fréquence du cron, destinataires et texte du mail.
-# https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/scheduling/annotation/Scheduled.html
-# https://docs.oracle.com/cd/E12058_01/doc/doc.1014/e12030/cron_expressions.htm#insertedID0
-# https://riptutorial.com/spring/example/21209/cron-expression
-# tous les jours à 1h 21min 10s
-# second, minute, hour, day of month, month, day of week
-notification.cron=0 0 0 * * ?
-notification.destinataires=ooioo@free.fr
-notification.objet=Ruches Notifications
-# Pour une en-tete de mail multiligne ajouter un espace suivi d'un \ à la fin
-#   des lignes.
-notification.entete=Hello !\n\n
-notification.pied=\nBye !
-
 # Pour initialiser la base de données au lancement de l'application Ruches.
 # Attention, cela remplace la base courante !
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.data-initialization.batch
 # spring.batch.jdbc.initialize-schema=always
-
-# Pagination nombre de lignes par défaut.
-# Utilisé par les tableaux datatables avec pagination.
-#   à choisir parmi 10, 25, 50, 100
-#    parseInt ajouté dans include.html sinon 0 ajouté en préfixe
-#       et la pagination ne fonctionne pas
-datatables.pageLength=25
 
 # Rayons des cercles de distances de butinage.
 # Utilisé par les cartes OSM et IGN de détail d'un rucher.
@@ -59,15 +43,6 @@ rucher.dispersion=50
 #   par le bouton "Rapprocher les ruches trop éloignées" des cartes
 ruche.dist.max=200    
 
-
-# Zoom initial pour la carte Google Maps des ruches d'un rucher.
-# Utilisé par le template html.
-rucher.map.zoom=20
-
-# Zoom initial pour la carte Google Maps des ruchers.
-# Utilisé par le template html.
-ruchers.map.zoom=10
-
 # Distance au delà de laquelle une alerte est donnée par Admin/Infos
 #  pour l'éloignement des ruches par rapport à l'entrée du rucher.
 dist.ruches.loins=200
@@ -80,9 +55,6 @@ dist.ruchers.loins=20
 # Nombre de semaines au delà duquel une alerte est donnée par Admin/Infos
 #  pour une ruche sans événement depuis ce délai.
 retard.ruches.evenement=4
-
-# Titre de la page d'accueil.
-accueil.titre=Ruches
 
 # Clé pour les cartes IGN, inutilisée si fichier autoconf ign
 # voir include.html
@@ -101,6 +73,14 @@ ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/ro
 # Utiliser plutôt les cartes OpenStreetMap ou IGN pour la France.
 gg.map.key=yyyyy
 gg.map.url=https://maps.googleapis.com/maps/api/js?key=${gg.map.key}&callback=initMap
+
+# Zoom initial pour la carte Google Maps des ruches d'un rucher.
+# Utilisé par le template html.
+rucher.map.zoom=20
+
+# Zoom initial pour la carte Google Maps des ruchers.
+# Utilisé par le template html.
+ruchers.map.zoom=10
 
 # Clé OpenWeatherMap pour la météo dans les ruchers.
 openweathermap.key=zzzzzz
@@ -121,34 +101,24 @@ spring.data.rest.basePath=/rest
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.actuator.customize-whitelabel-error-page
 server.error.whitelabel.enabled=false
 
-# test version 2.3.1
-# server.error.include-binding-errors=always
 # jpa - hibernate   
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.data-initialization
 # none, validate, update, create, and create-drop
 #    spring.jpa.hibernate.ddl-auto=create
 # https://stackoverflow.com/questions/38040572/spring-boot-loading-initial-data
 # spring.datasource.initialization-mode=always
-# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
 
-# A mettre dans Catalina/localhost/ruches.xml pour migration Spring Boot 2 vers 3
-# spring.jpa.properties.hibernate.id.db_structure_naming_strategy=single
-
-# https://prog.world/migration-to-hibernate-6/
-# https://github.com/hibernate/hibernate-orm/blob/6.0/migration-guide.adoc#id-sequence-table-name
-# https://thorben-janssen.com/migrating-to-hibernate-6/
+# À mettre dans Catalina/localhost/ruches.xml pour une base initialisée avec Spring Boot 2.
+#   En effet dans ce cas il y a une séquence unique pour toutes les entités.
+#   Depuis Spring Boot 3, il y a une séquence par entité.  
 # https://docs.jboss.org/hibernate/orm/6.0/javadocs/org/hibernate/cfg/AvailableSettings.html#ID_DB_STRUCTURE_NAMING_STRATEGY
 #   single legacy ou standard
+# spring.jpa.properties.hibernate.id.db_structure_naming_strategy=single
 
-# base de donnees
+# Base de données.
 # spring.datasource.url=jdbc:postgresql://localhost:5432/ruchesdev
 # spring.datasource.username=postgres
 # spring.datasource.password=postgres
-
-# Pour eviter plantage si 2 instances d'applications spring sur le meme tomcat
-# https://stackoverflow.com/questions/27440985/unable-to-register-mbean-hikaridatasource-hikaripool-0-with-key-datasource
-# sur la deuxieme instance :
-## spring.jmx.default-domain: test
 
 # Envoi de mail : en cas d'oubli du mot de passe ou pour les messages de notification
 #  pour les événements commentaires.
@@ -163,6 +133,21 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # spring.mail.properties.mail.smtp.starttls.enable
 email.from=xxx@free.fr
 
+# Notifications des événements commentaire par email.
+# Fréquence du cron, destinataires et texte du mail.
+# https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/scheduling/annotation/Scheduled.html
+# https://docs.oracle.com/cd/E12058_01/doc/doc.1014/e12030/cron_expressions.htm#insertedID0
+# https://riptutorial.com/spring/example/21209/cron-expression
+# tous les jours à 1h 21min 10s
+# second, minute, hour, day of month, month, day of week
+notification.cron=0 0 0 * * ?
+notification.destinataires=ooioo@free.fr
+notification.objet=Ruches Notifications
+# Pour une en-tete de mail multiligne ajouter un espace suivi d'un \ à la fin
+#   des lignes.
+notification.entete=Hello !\n\n
+notification.pied=\nBye !
+
 # Logs : niveau INFOS pour le code de l'application et ERROR pour le reste.
 #   Format du log et nom du fichier.
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-logging.html
@@ -170,16 +155,23 @@ logging.level.root=ERROR
 logging.level.ooioo=INFO
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger.%M - %X{username} - %msg%n
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger.%M - %X{username} - %msg%n
-#logging.level.org.springframework.web=INFO
+
+logging.level.org.springframework.web=INFO
+
 #logging.level.org.hibernate=ERROR
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#logging.level.org.thymeleaf=DEBUG
-#logging.level.org.thymeleaf.TemplateEngine.CONFIG=ERROR
-#logging.level.org.thymeleaf.TemplateEngine.TIMER=ERROR
-#logging.level.org.thymeleaf.TemplateEngine.cache.TEMPLATE_CACHE=ERROR
-#logging.level.org.thymeleaf.TemplateEngine.cache.EXPRESSION_CACHE=ERROR
+
+logging.level.org.thymeleaf=DEBUG
+
 # log dans un fichier
 logging.file.name=/tmp/ruches.log
 
+# Test Virtual Threads : pas d'amélioration du temps d'execution des tests
+# spring.threads.virtual.enabled=true 
+
+# Pour eviter plantage si 2 instances d'applications spring sur le meme tomcat
+# https://stackoverflow.com/questions/27440985/unable-to-register-mbean-hikaridatasource-hikaripool-0-with-key-datasource
+# sur la deuxieme instance :
+## spring.jmx.default-domain: test
 
