calcul distances correction bug api, temps en minutes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,7 +65,7 @@ ign.data.key=parcellaire,agriculture,essentiels
 ign.carteIGN.license=false
 
 # URL IGN pour le calcul des distances des ruchers.
-ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-pgr&getSteps=false&start=
+ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-pgr&getSteps=false&timeUnit=minute&start=
 
 
 # Clé pour les cartes Google Map des ruchers et des ruches.
@@ -104,7 +104,7 @@ server.error.whitelabel.enabled=false
 # jpa - hibernate   
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.data-initialization
 # none, validate, update, create, and create-drop
-#    spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=create
 # https://stackoverflow.com/questions/38040572/spring-boot-loading-initial-data
 # spring.datasource.initialization-mode=always
 
