ign api openlayers 3.2.33 -> 3.4.1 et ruchers distances améliorations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,7 +66,19 @@ ign.carteIGN.license=false
 
 # URL IGN pour le calcul des distances des ruchers.
 # https://geoservices.ign.fr/documentation/services/api-et-services-ogc/itineraires/documentation-du-service-du-calcul
-ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-pgr&getSteps=false&timeUnit=minute&start=
+# https://geoservices.ign.fr/documentation/services/services-geoplateforme/itineraire#72785
+# ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-pgr&getSteps=false&timeUnit=minute&start=
+ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-osrm&profile=car&optimization=fastest&crs=EPSG:4326&distanceUnit=meter&getSteps=false&timeUnit=minute&start=
+
+# url=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route
+# ?resource=bdtopo-osrm
+# &profile=car
+# &optimization=fastest
+# &crs=EPSG:4326
+# &distanceUnit=meter
+# &getSteps=false
+# &timeUnit=minute&start=
+
 
 
 # Clé pour les cartes Google Map des ruchers et des ruches.
