customConfig.json pour cartes ign

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,13 +56,13 @@ dist.ruchers.loins=20
 #  pour une ruche sans événement depuis ce délai.
 retard.ruches.evenement=4
 
-# Clé pour les cartes IGN, inutilisée si fichier autoconf ign
+# Clé pour les cartes IGN, inutilisée si fichier customConfig.json ign
 # voir include.html
 ign.data.key=parcellaire,agriculture,essentiels
 
 # true si license pour scan IGN fournie. Pour activer la couche scan.
 # si false la couche scan n'est pas affichée
-ign.carteIGN.license=false
+ign.carteIGN.license=true
 
 # URL IGN pour le calcul des distances des ruchers.
 # https://geoservices.ign.fr/documentation/services/api-et-services-ogc/itineraires/documentation-du-service-du-calcul
