infos.html correction pluriel essaim hors ruche

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,8 +68,10 @@ ign.carteIGN.license=true
 # https://geoservices.ign.fr/documentation/services/api-et-services-ogc/itineraires/documentation-du-service-du-calcul
 # https://geoservices.ign.fr/documentation/services/services-geoplateforme/itineraire#72785
 # ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-pgr&getSteps=false&timeUnit=minute&start=
-ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-osrm&profile=car&optimization=fastest&crs=EPSG:4326&distanceUnit=meter&getSteps=false&timeUnit=minute&start=
 
+# https://geoservices.ign.fr/documentation/services/services-geoplateforme/itineraire
+
+# ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route?resource=bdtopo-osrm&profile=car&optimization=fastest&crs=EPSG:4326&distanceUnit=meter&getSteps=false&timeUnit=minute&start=
 # url=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/route
 # ?resource=bdtopo-osrm
 # &profile=car
@@ -78,6 +80,17 @@ ign.url.itineraire=https://wxs.ign.fr/calcul/geoportail/itineraire/rest/1.0.0/ro
 # &distanceUnit=meter
 # &getSteps=false
 # &timeUnit=minute&start=
+
+ign.url.itineraire=https://data.geopf.fr/navigation/itineraire?resource=bdtopo-osrm&profile=car&crs=EPSG:4326&distanceUnit=meter&getSteps=false&timeUnit=minute&start=
+
+# url=https://data.geopf.fr/navigation/itineraire
+# ?resource=bdtopo-osrm
+# &profile=car
+# &crs=EPSG:4326
+# &distanceUnit=meter
+# &getSteps=false
+# &timeUnit=minute&start=
+
 
 
 
