--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -116,8 +116,15 @@ openweathermap.key=zzzzzz
 management.endpoints.web.base-path=/admin/logs
 management.endpoints.enabled-by-default=false
 management.endpoint.logfile.enabled=true
+
+# http://localhost:8080/ruches/admin/logs/env
+# management.endpoint.env.enabled=true
+
 management.endpoints.jmx.exposure.exclude=*
+
 management.endpoints.web.exposure.include=logfile
+
+# management.endpoints.web.exposure.include=*
 
 # URI de base pour les appels REST.
 # https://docs.spring.io/spring-data/rest/reference/introduction/getting-started.html
@@ -180,8 +187,23 @@ notification.pied=\nBye !
 # https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging
 logging.level.root=ERROR
 logging.level.ooioo=INFO
-logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger.%M - %X{username} - %msg%n
-logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger.%M - %X{username} - %msg%n
+#logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger.%M - %X{username} - %msg%n
+#  %d la date, %logger le nom du logger (la classe java) limité à 10 caractères mais le nom de la classe reste en entier, 
+#    %M la méthode (attention pas rapide), 
+#    %X{username} logback MDC le nom de l'utilisateur connecté , %msg le message, %n saut de ligne
+logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %logger{10}.%M - %X{username} - %msg%n
+#logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger.%M - %X{username} - %msg%n
+logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} %logger{10}.%M - %X{username} - %msg%n
+# The maximum number of archive log files to keep (defaults to 7).
+logging.logback.rollingpolicy.max-history=100
+# The maximum size of log file before it is archived.
+logging.logback.rollingpolicy.max-file-size=1MB
+# The maximum amount of size log archives can take before being deleted.
+logging.logback.rollingpolicy.total-size-cap=100MB
+# If log archive cleanup should occur when the application starts.
+logging.logback.rollingpolicy.clean-history-on-start=false
+
+
 #logging.level.org.springframework.web=INFO
 #logging.level.org.hibernate=ERROR
 #logging.level.org.hibernate.SQL=DEBUG
