--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,9 +91,6 @@ ign.url.itineraire=https://data.geopf.fr/navigation/itineraire?resource=bdtopo-o
 # &getSteps=false
 # &timeUnit=minute&start=
 
-
-
-
 # Clé pour les cartes Google Map des ruchers et des ruches.
 # Payantes, pas opensource et pleines de trackers.
 # Utiliser plutôt les cartes OpenStreetMap ou IGN pour la France.
@@ -149,9 +146,13 @@ server.error.whitelabel.enabled=false
 # spring.jpa.properties.hibernate.id.db_structure_naming_strategy=single
 
 # Base de données.
+# après insallation de postgresql, penser à créer l'utilisateur de connexion : create user xxx; 
+# et son password : psql -c "alter user postgres with password 'postgres';"
 # spring.datasource.url=jdbc:postgresql://localhost:5432/ruchesdev
 # spring.datasource.username=postgres
 # spring.datasource.password=postgres
+# Le dialect est automatiquement reconnu par hibernate, la ligne suivante est inutile
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Envoi de mail : en cas d'oubli du mot de passe ou pour les messages de notification
 #  pour les événements commentaires.
