EssaimService.java ajouté @Value. inactives type de sorties à ignorer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.resources.cache.cachecontrol.max-age=7d
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.data-initialization.batch
 # spring.batch.jdbc.initialize-schema=always
 
+# Essaim à ignorer pour le calcul de l'age des reines, type de sortie.
+essaim.age.ignore=DIV,REM
+
 # Rayons des cercles de distances de butinage.
 # Utilisé par les cartes OSM et IGN de détail d'un rucher.
 rucher.butinage.rayons=1000,2000,3000,4000,5000
